@@ -1,3 +1,11 @@
+fee (03/01/02)
+---------------------
+Mods:
+ + updated experience handling
+   - the stat list will show sane numbers
+   - the exp box in the main window will display current exp plus the x/330 fraction
+ + created opcode AltExpUpdateCode and expAltUpdateStruct for future mods
+
 dohpaZ (03/01/02)
 ---------------------
 Modifications:
